--- a/mentbotapp/src/app/doctors/availabilitycheck/availabilitycheck.component.html
+++ b/mentbotapp/src/app/doctors/availabilitycheck/availabilitycheck.component.html
@@ -2,71 +2,49 @@
   <div class="col-lg-12">
     <div class="card">
       <div class="card-header">
-        <i class="bg-indigo theme-color mb-3 w-75 rounded mb-2"></i
-        ><b> <em>My Schedule </em></b>
+        <i class="bg-indigo theme-color mb-3 w-75 rounded mb-2"></i><b> <em>My Schedule </em></b>
       </div>
-      <!-- </div> -->
       <div class="card-body">
-        <div class="form-group row">
-          <label class="col-md-3 col-form-label" for="multiple-select"
-            >Days Available</label
-          >
-          <div class="col-md-9">
-            <select
-              id="multiple-select"
-              name="multiple-select"
-              class="form-control"
-              size="5"
-              multiple="multiple"
-            >
-              <option value="1">Monday</option>
-              <option value="2">Tuesday</option>
-              <option value="3">Wednesday</option>
-              <option value="4">Thursday</option>
-              <option value="5">Friday</option>
-              <option value="6">Saturday</option>
-              <option value="7">Sunday</option>
-            </select>
+        <form name="form" role="form" [formGroup]="addScheduleForm">
+          <div class="form-group row">
+            <label class="col-md-3 col-form-label" for="multiple-select">Days Available</label>
+            <div class="col-md-9">
+              <select id="multiple-select" formControlName="daysAvailable" name="multiple-select" class="form-control" size="5" multiple="multiple">
+                <option value="1">Monday</option>
+                <option value="2">Tuesday</option>
+                <option value="3">Wednesday</option>
+                <option value="4">Thursday</option>
+                <option value="5">Friday</option>
+                <option value="6">Saturday</option>
+                <option value="7">Sunday</option>
+              </select>
+            </div>
           </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-md-3 col-form-label" for="date-input"
-            >Start Time</label
-          >
-          <div class="col-md-9">
-            <input
-              class="form-control"
-              id="date-input"
-              type="time"
-              name="date-input"
-              placeholder="time"
-            />
-            <span class="help-block">Please enter a valid Start Time</span>
+          <div class="form-group row">
+            <label class="col-md-3 col-form-label" for="date-input">Start Time</label>
+            <div class="col-md-9">
+              <input class="form-control" formControlName="startTime" id="date-input" type="time" name="date-input" placeholder="time" />
+              <span class="help-block">Please enter a valid Start Time</span>
+            </div>
           </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-md-3 col-form-label" for="date-input"
-            >End Time</label
-          >
-          <div class="col-md-9">
-            <input
-              class="form-control"
-              id="date-input"
-              type="time"
-              name="date-input"
-              placeholder="time"
-            />
-            <span class="help-block">Please enter a valid End Time</span>
+          <div class="form-group row">
+            <label class="col-md-3 col-form-label" for="date-input">End Time</label>
+            <div class="col-md-9">
+              <input class="form-control" formControlName="endTime" id="date-input" type="time" name="date-input" placeholder="time" />
+              <span class="help-block">Please enter a valid End Time</span>
+            </div>
           </div>
-        </div>
+          
+        </form>
         <div class="card-footer">
-          <button type="Accept" class="btn btn-sm btn-primary">
+          <button type="Accept" (click)="addSchedule()" class="btn btn-sm btn-primary">
             <i class="fa fa-dot-circle-o"></i> Add Schedule
           </button>
           <button type="Cancel" class="btn btn-sm btn-danger">
             <i class="fa fa-ban"></i> Cancel
           </button>
         </div>
+        
         <!-- <table class="table table-sm">
             <thead>
               <tr>
@@ -122,7 +100,7 @@
                   </div>
                   </td>
                 <td> -->
-              <!-- <select class="form-control" style="width: auto" name="starttime">
+        <!-- <select class="form-control" style="width: auto" name="starttime">
                     <option value="9.00">9.00 </option>
                     <option value="10.00">10.00</option>
                   </select> -->
