--- a/mentbotapp/src/app/doctors/doctors-dashboard/doctors-dashboard.component.html
+++ b/mentbotapp/src/app/doctors/doctors-dashboard/doctors-dashboard.component.html
@@ -18,16 +18,18 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>x</td>
-                <td>y</td>
-                <td>z</td>
-                <td>z</td>
+              <tr *ngFor="let item of appointmentDetails">
+                <td>{{item.patientname}}</td>
+                <td>{{item.appointmentdate}}</td>
+                <td>{{item.starttime}}</td>
+                <td>{{item.endtime}}</td>
                 <td>
-                  <span> <td>
-                    <span><button type="Accept" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Accept</button>
-                      <button type="Cancel" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button></span>
-                  </td></span>
+                  <span>
+                    <button type="Accept" (click)="acceptAppointment(item.id)" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i>Accept</button>
+                  </span>
+                  <span>
+                    <button type="Cancel" (click)="cancelAppointment(item.id)" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancel</button>
+                  </span>
                 </td>
               </tr>
               
